--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-reveal": "^0.4.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typewriter-effect": "^2.18.2",
