--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aos": "^2.3.4",
+    "framer-motion": "^4.1.17",
     "lottie-web": "^5.8.1",
     "particles-bg": "^2.5.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",    
+    "react-dom": "^17.0.2",
     "react-reveal": "^0.4.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
